--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,11 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // 엑셀파일 읽어오기 위한 라이브러리
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.3'
+
+
 }
 
 tasks.named('test') {
