--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     // 엑셀파일 읽어오기 위한 라이브러리
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.3'
 
+    implementation 'software.amazon.awssdk:s3:2.17.67'
+
 
 }
 
